@@ -4,7 +4,6 @@ FROM debian:7
 
 RUN echo "deb http://ppa.launchpad.net/webupd8team/java/ubuntu xenial main" | tee /etc/apt/sources.list.d/webupd8team-java.list && \
 	echo "deb-src http://ppa.launchpad.net/webupd8team/java/ubuntu xenial main" | tee -a /etc/apt/sources.list.d/webupd8team-java.list && \
-	echo "deb http://dl.bintray.com/sbt/debian /" | tee -a /etc/apt/sources.list.d/sbt.list &&  \
 	echo "deb http://repo.mongodb.org/apt/debian wheezy/mongodb-org/3.2 main" | tee /etc/apt/sources.list.d/mongodb-org-3.2.list && \
 	apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys EEA14886 && \
 	apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 99E82A75642AC823 && \
@@ -18,7 +17,14 @@ RUN echo "deb http://ppa.launchpad.net/webupd8team/java/ubuntu xenial main" | te
 	apt-get update -y && \
 	echo debconf shared/accepted-oracle-license-v1-1 select true | debconf-set-selections && \
 	echo debconf shared/accepted-oracle-license-v1-1 seen true | debconf-set-selections && \
-	apt-get install -y --force-yes oracle-java8-installer oracle-java8-set-default mongodb-org redis-server redis-tools sbt unzip wget procps
+	apt-get install -y --force-yes oracle-java8-installer oracle-java8-set-default mongodb-org redis-server redis-tools unzip wget procps
+
+# install sbt
+RUN wget -c 'https://repo1.maven.org/maven2/org/scala-sbt/sbt-launch/1.0.0-M4/sbt-launch.jar'  && \
+	mv sbt-launch.jar /var && \
+	echo '#!/bin/bash' > /usr/bin/sbt && \
+	echo 'java -Xms512M -Xmx1536M -Xss1M -XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=256M /var/sbt-launch.jar "$@"' >> /usr/bin/sbt && \
+	chmod u+x /usr/bin/sbt
 
 # install jprofiler
 RUN wget -c http://download-keycdn.ej-technologies.com/jprofiler/jprofiler_linux_9_2.sh && bash jprofiler_linux_9_2.sh -q
@@ -44,7 +50,8 @@ ONBUILD RUN cd /data && export proj_name=`sbt settings name | tail -1 | cut -d' 
 	ln -s `pwd`/$proj_name /entrypoint
 
 # cleanup
-ONBUILD RUN rm -r /data && apt-get remove --purge -y mongodb-org redis-server redis-tools sbt unzip wget \
+ONBUILD RUN rm -r /data && apt-get remove --purge -y mongodb-org redis-server redis-tools unzip wget \
+	&& rm /var/sbt-launch.jar /usr/bin/sbt \
 	&& apt-get autoremove -y && apt-get -y clean && rm -rf /var/lib/apt/lists/*
 
 ONBUILD CMD ["/entrypoint", "-Dconfig.resource=prod.conf", "-Dfile.encoding=UTF8"]
